--- a/href-attribute.html
+++ b/href-attribute.html
@@ -12,6 +12,8 @@
     <br><br>
 
     <a href="https://www.google.com/">This link will take you to google.com .</a>
+
+    <a href="https://www.google.com/" target="_top">This link will take you to google.com .</a>
     </p>
 </body>
 </html>
